# gam

./: .envrc  .gitattributes  .gitignore  Cargo.nix  Cargo.toml  README.md  bacon.toml  build.fac  flake.nix  github_build.sh  justfile  plot.py  run.sh  rustfmt.toml  shell.nix  taplo.toml
.cargo/: config.toml
.github/workflows/: check.yml  publish.yml  publish_main.yml  release.yml
assets/models/temp/: craft_speederB.glb  robot1.glb  snowman.glb
crates/client/: Cargo.toml  build.rs  i18n.toml
crates/client/src/: ability.rs  aim.rs  asset_handler.rs  bar.rs  color_gradient.rs  config.rs  controls.rs  debug.rs  draw.rs  i18n.rs  lib.rs  main.rs  particles.rs  shapes.rs  splash.rs  ui.rs  world.rs
crates/client/src/ability/: gravity_ball.rs  grenade.rs  gun.rs  mod.rs  rocket.rs  transport.rs
crates/client/src/asset_handler/: bar.rs  bullet.rs  character.rs  explosion.rs  grenade.rs  mod.rs  music.rs  neutrino_ball.rs  rocket.rs  target.rs  temperature.rs  time_dilation.rs  transport.rs  wall.rs
crates/client/src/bar/: energybar.rs  healthbar.rs
crates/client/src/draw/: bullet.rs  character.rs  death.rs  explosion.rs  grenade.rs  level.rs  neutrino_ball.rs  raycast_scene.rs  rocket.rs  temperature.rs  time_dilation.rs  transport.rs
crates/client/src/ui/: hud.rs  mod.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: ability.rs  action.rs  ai.rs  collision.rs  death_callback.rs  debug.rs  input.rs  level.rs  lib.rs  lifecycle.rs  movement.rs  multiplayer.rs  physics.rs  player.rs  status_effect.rs  system.rs  time.rs
crates/engine/src/ability/: bullet.rs  cooldown.rs  explosion.rs  gravity_ball.rs  grenade.rs  gun.rs  mod.rs  neutrino_ball.rs  properties.rs  rocket.rs  seeker_rocket.rs  speed_up.rs  transport.rs
crates/engine/src/ai/: charge.rs  pathfind.rs  simple.rs
crates/engine/src/math/: f32.rs  mod.rs  vec.rs
crates/engine/src/status_effect/: charge.rs  phased.rs  temperature.rs  time_dilation.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
i18n/en-US/: client.ftl
locales/: en.toml
src/: ability.rs  ai.rs  asset_handler.rs  client.rs  config.rs  graphics.rs  healthbar.rs  lib.rs  main.rs  physics.rs  shapes.rs  status_effect.rs  system.rs  time.rs
src/ability/: grenade.rs
src/ai/: a2c.rs  dqn.rs  env.rs  f32.rs  ppo.rs  qlearning.rs  replay_buffer.rs  simple.rs
src/ai/a2c/: env.rs  model.rs
src/client/: asset_handler.rs  bar.rs  config.rs  controls.rs  healthbar.rs  mesh.rs  splash.rs  ui.rs
src/client/bar/: energybar.rs  healthbar.rs
src/graphics/: asset_handler.rs
