[workspace]
members = [
  "crates/engine",
  "crates/client",
  "crates/server",
]
resolver = "2"

[workspace.dependencies]
# Bevy crates
bevy = { version = "0.14.2", default-features = false }
bevy_app = "0.14.2"
bevy_core = "0.14.2"
bevy_diagnostic = "0.14.2"
bevy_ecs = "0.14.2"
bevy_hierarchy = "0.14.2"
bevy_internal = "0.14.2"
bevy_log = "0.14.2"
bevy_math = "0.14.2"
bevy_reflect = "0.14.2"
bevy_state = "0.14.2"
bevy_tasks = "0.14.2"
bevy_time = "0.14.2"
bevy_transform = "0.14.2"
bevy_utils = "0.14.2"

# Non-bevy crates
bevy_rapier3d = { version = "0.27", features = ["enhanced-determinism"] }
smallvec = "2.0.0-alpha.7"
subenum = "1.1.2"
tracing = "0.1.40"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not our code.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Recommended by Rapier for increased performance.
codegen-units = 1

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
