[package]
edition = "2021"
name = "client"
version = "0.1.0"

[dependencies]
engine.path = "../engine"

bevy = { workspace = true, default-features = false, features = [
  "animation",
  "bevy_asset",
  # "bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  "ktx2",
  "zstd",
  # "vorbis",
  "x11",
  # "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
  "webgl2",
] }
bevy-ui-navigation = "0.33.1"
bevy_hanabi = { version = "0.8.0", default-features = false, features = ["3d"] }
bevy_kira_audio = "0.18.0"
bevy_mod_raycast = "0.16.0"
bevy_rapier3d.workspace = true
directories = "5"
itertools = "0.12"
iyes_progress = { version = "0.10.0", features = ["assets"] }
leafwing-input-manager = "0.11.1"
rand = "0.8"
rust-i18n = "2.3.0"
serde = "1"
serde_json = "1"
smallvec.workspace = true
subenum = "1.1.1"
thiserror = "1"
tracing.workspace = true

[features]
debug = []

[lints]
workspace = true
