[package]
edition = "2021"
name = "client"
version = "0.1.0"

[dependencies]
engine.path = "../engine"

bevy = { workspace = true, default-features = false, features = [
  "animation",
  "bevy_asset",
  # "bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  "ktx2",
  "zstd",
  # "vorbis",
  "x11",
  # "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
  "webgl2",
] }
bevy-inspector-egui = "0.23"
# bevy-ui-navigation = "0.33.1"
bevy_hanabi = { version = "0.10.0", default-features = false, features = ["3d"] }
bevy_kira_audio = "0.19.0"
bevy_mod_raycast = "0.17.0"
bevy_rapier3d.workspace = true
clap = { version = "4.5.2", features = ["derive"] }
directories = "5"
i18n-embed = { version = "0.15.2", features = ["desktop-requester", "fluent-system"] }
i18n-embed-fl = "0.9.2"
itertools = "0.12"
iyes_progress = { version = "0.11.0", features = ["assets"] }
leafwing-input-manager = "0.13.3"
rand = "0.8"
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }
serde = "1"
serde_json = "1"
smallvec.workspace = true
subenum = "1.1.2"
thiserror = "1"
tracing.workspace = true

[lints]
workspace = true
