[package]
edition = "2021"
name = "client"
version = "0.1.0"

[dependencies]
engine.path = "../engine"

bevy = { workspace = true, default-features = false, features = [
  "animation",
  "bevy_asset",
  # "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  # "vorbis",
  "webgl2",
  "x11",
] }
bevy-inspector-egui = "0.29"
# bevy-ui-navigation = "0.33.1"
bevy_hanabi = { version = "0.14.0", default-features = false, features = ["3d"] }
bevy_kira_audio = "0.22.0"
bevy_rapier3d.workspace = true
clap = { version = "4.5.29", features = ["derive"] }
directories = "6"
i18n-embed = { version = "0.15.3", features = ["desktop-requester", "fluent-system"] }
i18n-embed-fl = "0.9.3"
itertools = "0.14"
# iyes_progress = { version = "0.13.0", features = ["assets"] }
leafwing-input-manager = "0.16.0"
rand = "0.9"
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }
serde = "1"
serde_json = "1"
smallvec.workspace = true
subenum.workspace = true
thiserror = "2"
tracing.workspace = true

[lints]
workspace = true
