[package]
edition = "2021"
name = "engine"
version = "0.1.0"

[dependencies]
# Bevy crates
# We use individual bevy crates to make sure we don't accidentally include
# client-facing features of bevy in this crate.
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
bevy_math.workspace = true
bevy_reflect.workspace = true
bevy_tasks.workspace = true
bevy_time.workspace = true
bevy_transform.workspace = true
bevy_utils.workspace = true

# Other crates
bevy_rapier3d.workspace = true
bitmask-enum = "2.2.3"
bytemuck = { version = "1.15.0", features = ["derive"] }
futures-lite = "2.3.0"
image = "0.25.1"
libm = "0.2.8"
oxidized_navigation = { version = "0.10.0", features = ["rapier"] }
rand = "0.8"
serde = "1"
smallvec.workspace = true
strum = { version = "0.26.2", features = ["derive"] }
subenum.workspace = true
tracing.workspace = true
# Wire serialization, try:
# - bincode
# - bitcode

[lints]
workspace = true
